odd spacing issue before the blank.co section

--- a/jackbenakfund.org/jason/css/styles.css
+++ b/jackbenakfund.org/jason/css/styles.css
@@ -190,6 +190,9 @@ img{
     display: inline;
 }
 
+#blank{
+	padding-top: 4rem;
+}
 
 /***********************************************/
 
